Fixes issue with password input is not aligned

--- a/codebrag-ui/app/styles/forms.styl
+++ b/codebrag-ui/app/styles/forms.styl
@@ -111,6 +111,7 @@ form
     box-shadow: none;
     display: inline-block;
     width: 18em;
+    float: right;
 
   & .checkbox
     padding: 0 0.77em;
